--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -5,8 +5,6 @@
 }
 
 .title {
-  margin: 0;
-  font-size: 32px;
   grid-column: span 24;
 
   @include on-tablet {
@@ -14,8 +12,7 @@
   }
 
   @include on-mobile {
-    grid-column: 1 / -4;
-    grid-row: 2;
+    grid-column: span 4;
   }
 }
 
@@ -32,24 +29,36 @@
 }
 
 .empty {
-  grid-column: 1 / -1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include on-desktop {
+    grid-column: 8/ 24;
+    grid-row: 3;
+  }
+
+  @include on-tablet {
+    grid-column: 3/ 9;
+    grid-row: 3;
+  }
+
+  @include on-mobile {
+    grid-column: 2/ 4;
+  }
+}
+
+.empty img,
+.emptyImage {
+  width: 500px;
+
+  @include on-tablet {
+    width: 400px;
+  }
+
+  @include on-mobile {
+    width: 150px;
+  }
 }
 
 .summary {
   grid-column: 17 / 25;
-
-  @include on-tablet {
-    grid-column: span 12;
-    margin-top: 24px;
-  }
-
-  @include on-mobile {
-    grid-column: span 4;
-  }
-
   padding: 32px 24px;
   border: 1px solid #e2e6e9;
   background-color: #fff;
@@ -58,8 +67,17 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
-
   height: fit-content;
+
+  @include on-tablet {
+    grid-column: span 12;
+    margin-top: 24px;
+  }
+
+  @include on-mobile {
+    grid-column: span 4;
+    margin-top: 24px;
+  }
 }
 
 .totalPrice {
@@ -85,10 +103,8 @@
 .checkoutBtn {
   width: 100%;
   height: 48px;
-
   background-color: #313237;
   color: #fff;
-
   border: none;
 
   font-size: 14px;
