--- a/src/modules/FavoritesPage/FavoritesPage.module.scss
+++ b/src/modules/FavoritesPage/FavoritesPage.module.scss
@@ -15,7 +15,7 @@
   }
 
   @include on-mobile {
-    grid-column: span 2;
+    grid-column: span 4;
   }
 }
 
