--- a/src/modules/TabletsPage/TabletsPage.module.scss
+++ b/src/modules/TabletsPage/TabletsPage.module.scss
@@ -8,11 +8,11 @@
 
 
   @media (min-width: 1200px) {
-    padding: 80px 0;
+    padding: 40px 0;
   }
 
   @media (max-width: 1199px) and (min-width: 640px) {
-    padding: 40px 24px;
+    padding: 60px 24px;
   }
 
   @media (max-width: 639px) {
